remove dark mode, fix logout button, change search bar color to magenta, remove pwd gen from welcome

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -3,6 +3,7 @@
 :root { 
     --magenta:       rgba(170, 0, 186);   /* #AA00BA */
     --magenta_light: rgba(170, 0, 170);   /* #AA00AA */
+    --magenta-a:       rgba(170, 0, 186, 0.3);
     --purple:        rgba(93, 13, 173);
     --grey:          rgba(248, 249, 251); /* #f8f9fb */
     --blue:          rgba(11, 87, 208);   /* Styled links with this blue */
@@ -36,12 +37,26 @@ nav a, nav button {
     background-color: white;
 }
 
+.logout {
+    color: black;
+    cursor: pointer;
+    text-decoration: none;
+    margin: 2px;
+    padding: 3px 12px;
+    border: 1.5px solid;
+    font-weight: 700;
+    border-radius: 0;
+    background-color: white;
+    font-family: inherit;
+    font-size: inherit;
+}
+
 /* --- SEARCHBAR --- */
 
 .searchbar {
     border-radius: 25px;
     border: 2px solid black;
-    background-color: gainsboro; 
+    background-color: var(--magenta-a); 
     width: 50%;
     height: 2rem;
     padding: 1.5px 2%;
@@ -55,6 +70,10 @@ nav a, nav button {
     flex: 1;
     min-width: 0;
     height: 100%
+}
+
+.searchbar ::placeholder {
+  color: black;
 }
 
 /* --- MAIN --- */
